--- a/index.css
+++ b/index.css
@@ -2,85 +2,98 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
 
 body {
-    font-family: 'IBM Plex Sans', sans-serif;
     background-color: #fafbff;
+    font-family: 'IBM Plex Sans', sans-serif;
 }
 
 h1 {
     font-family: 'Poppins', sans-serif;
-    font-weight: bold;
     font-size: x-large;
+    font-weight: bold;
 }
 
-input[type="text"] {
-    width: 200px;
-    height: 20px;
-    padding-right: 50px;
+form {
+    padding: 10px 0 40px 0;
+}
+
+input[type="number"] {
+    border-color: lightgray;
+    border-radius: 5px 0 0 5px;
+    font-size: large;
+    font-weight: bold;
+    height: 40px;
+    padding-left: 20px;
+    padding-right: 40px;
+    width: 78%;
 }
 
 input[type="submit"] {
-    margin-left: -50px;
-    height: 25px;
-    width: 50px;
-    background: blue;
-    color: white;
+    background: #2ACCAC;
     border: 0;
-    -webkit-appearance: none;
+    border-radius: 0 5px 5px 0;
+    color: white;
+    font-weight: bold;
+    height: 46px;
+    margin-left: -75px;
+    padding-top: 3px;
+    width: 25%;
 }
 
 .container {
-    width: 400px;
     margin: auto;
+    width: 400px;
 }
 
 .container-inner {
     background-color: white;
     border-radius: 0 0 5px 5px;
-    box-shadow: 0 3px 3px 0px lightgrey;
+    box-shadow: 0 3px 3px 0 lightgrey;
 }
 
 .content {
-    margin: 20px;
+    margin: 30px;
 }
 
-.progress-bar-border {
-    border: 1px solid #ccc;
+.progress-bar-bg {
+    background-color: #b6f2e4;
+    border-radius: 5px 5px 0 0;
+    height: 15px;
 }
 
 .progress-bar {
+    background-color: #2ACCAC;
+    border-radius: 5px 5px 0 0;
     color: #000;
-    background-color: #9e9e9e;
-}
-
-.success {
-    color: green;
+    height: 15px;
 }
 
 .error {
     color: red;
+    font-weight: bold;
 }
 
 .speech-bubble {
-  margin: 0;
-  margin-bottom: 30px;
-  padding: 1px 18px;
-  position: relative;
-  background: #e3ebfc;
-  color: #5884ea;
-  border-radius: 5px;
+    background: #e3ebfc;
+    border-radius: 5px;
+    color: #5884ea;
+    margin: 0;
+    margin-bottom: 30px;
+    padding: 1px 18px;
+    position: relative;
 }
 .speech-bubble::before {
-  border: 12.5px solid transparent;
-  border-top: 12.5px solid #e3ebfc;
-  border-bottom: 0;
-  height: 0;
-  width: 0;
-  border-top-width: 18px;
-  content: '';
-  display: block;
-  position: absolute;
-  left: 20rem;
-  bottom: -18px;
-  -webkit-transform-origin: center;
-          transform-origin: center;
+    border: 12.5px solid transparent;
+    border-bottom: 0;
+    border-top: 12.5px solid #e3ebfc;
+    border-top-width: 18px;
+    bottom: -18px;
+    content: '';
+    display: block;
+    height: 0;
+    left: 20rem;
+    position: absolute;
+    transform-origin: center;
+    width: 0;
+    -webkit-transform-origin: center;
 }
+
