--- a/index.css
+++ b/index.css
@@ -97,3 +97,13 @@ input[type="submit"] {
     -webkit-transform-origin: center;
 }
 
+.visuallyhidden {
+    border: 0;
+    clip: rect(0 0 0 0);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
+}
