--- a/index.css
+++ b/index.css
@@ -66,7 +66,7 @@ input[type="submit"] {
     padding-left: 30px;
 }
 .left-inner-addon p {
-    color: gray;
+    color: #595959;
     position: absolute;
     margin-top: 13px;
     padding-left: 15px;
